# sen

./: .gitignore  Cargo.toml  Makefile.toml  README.md  code.csv  index.html
.github/workflows/: deploy.yaml
assets/: index-C9eBwCcv.css  index-Chs4ftUZ.js  index-DyHsgxgm.js  web_bg-DITyVxHi.wasm  worklet-6NenOYd1.js  worklet-Dk6ThG_g.js  worklet-WM8EjUX6.js
cli/: Cargo.toml
cli/src/: app.rs  joypad.rs  lib.rs  main.rs  renderer.rs  speaker.rs
examples/: snake_game.rs  sound.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/apu/: noise_register.rs  pulse_register.rs
lib/src/bus/: mod.rs
lib/src/cpu/: mod.rs  opecode.rs  trace.rs
lib/src/emulator/: mod.rs
lib/src/joypad/: mod.rs
lib/src/ppu/: mask_register.rs  mod.rs
pc/: Cargo.toml
pc/src/: app.rs  emulator.rs  joypad.rs  lib.rs  main.rs  renderer.rs
sdl2/: Cargo.toml
sdl2/src/: emulator.rs
src/: lib.rs  main.rs  palette.rs
src/apu/: mod.rs  triangle_register.rs
src/bus/: mod.rs
src/cpu/: addressing_mode.rs  interrupt.rs  mod.rs  opcode.rs  opecode.rs  status.rs  test.rs  trace.rs
src/joypad/: button.rs  dummy.rs  mod.rs  register.rs
src/ppu/: addr_register.rs  ctrl_register.rs  mask_register.rs  mod.rs  oam_register.rs  scroll_register.rs  status_register.rs
src/render/: dummy.rs  frame.rs  mod.rs  rect.rs  sdl2.rs
src/rom/: mod.rs
src/speaker/: mod.rs
src/utils/: noise.rs
tests/: nes_test.rs
web/: Cargo.toml
web/frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: emulator.rs  joypad.rs  lib.rs  renderer.rs  speaker.rs
(+96 files in other folders)
